--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,16 @@
 <section class="section">
+  <app-reactive-form></app-reactive-form>
+</section>
+
+<section class="section">
+  <app-form></app-form>
+</section>
+
+<section class="section">
+  <p>Currency change </p>
+  <p>{{20 | usdInr: 120}} </p>
+</section>
+<section class="section">
   <app-pipes></app-pipes>
 </section>
 <section class="section">
