--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
 <section class="section">
+  <app-home></app-home>
+</section>
+<section class="section">
+  <app-directives></app-directives>
+</section>
+<section class="section">
   <app-reactive-form></app-reactive-form>
 </section>
 
