--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<div class="footer">
+<h1>Footer </h1>
+<ul>
+  <li *ngFor="let user of users">
+    {{user.name}}--{{user.age}}--{{user.email}}
+  </li>
+</ul>
+</div>
