--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
+<section>
+  <p>directives</p>
+  <ul>
+    <li *ngFor="let user of users">
+      "Name"{{user.name}}--"age"{{user.age}}--"email"{{user.email}}
+    </li>
+  </ul>
+</section>
+
 <section class="section">
   <app-home></app-home>
 </section>
@@ -44,4 +53,8 @@
 
 <section class="section">
   <app-todolist></app-todolist>
+</section>
+
+<section class="section">
+  <app-footer></app-footer>
 </section>
