--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<section class="section">
+  <app-fetch-data-from-api></app-fetch-data-from-api>
+</section>
 <section>
   <p>directives</p>
   <ul>
