--- a/src/app/fetch-data-from-api/fetch-data-from-api.component.html
+++ b/src/app/fetch-data-from-api/fetch-data-from-api.component.html
@@ -1,3 +1,20 @@
+<p>get-user-form-data works!</p>
+
+<form #userForm="ngForm" (ngSubmit)="getUserFormData(userForm.value)">
+  <input type="text" placeholder="Enter Name" ngModel name="firstName">
+  <br>
+  <br>
+  <input type="text" placeholder="Enter lastName" ngModel name="lastName">
+  <br>
+  <br>
+  <input type="password" name="password" ngModel placeholder="Enter Password">
+  <br>
+  <br>
+  <button>Login</button>
+
+</form>
+
+
 <p>fetch-data-from-api works!</p>
 <ul>
   <li *ngFor="let users of users">
