--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<!-- <section class="section">
+  <app-get-user-form-data></app-get-user-form-data>
+</section> -->
 <section class="section">
   <app-fetch-data-from-api></app-fetch-data-from-api>
 </section>
